--- a/requirements.txt
+++ b/requirements.txt
@@ -1,256 +1,33 @@
-absl-py==0.7.1
-alabaster==0.7.12
-alphabet-detector==0.0.7
-anaconda-client==1.7.2
-anaconda-project==0.8.3
-arpa==0.1.0b4
-asn1crypto==1.0.1
-astor==0.8.0
-astroid==2.3.1
-astropy==3.2.1
-atomicwrites==1.3.0
-attrs==19.2.0
-Babel==2.7.0
-backcall==0.1.0
-backports.os==0.1.1
-backports.shutil-get-terminal-size==1.0.0
-beautifulsoup4==4.8.0
-bitarray==1.0.1
-bkcharts==0.2
-bleach==3.1.0
-blis==0.2.4
-bokeh==1.3.4
-boto==2.49.0
-boto3==1.9.193
-botocore==1.12.193
-Bottleneck==1.2.1
-bs4==0.0.1
-cachetools==3.1.1
-certifi==2019.6.16
-cffi==1.12.3
-chardet==3.0.4
-Click==7.0
-cloudpickle==1.2.2
-clyent==1.2.2
-colorama==0.4.1
-contextlib2==0.6.0
-cryptography==2.7
-cycler==0.10.0
-cymem==2.0.2
-Cython==0.29.13
-cytoolz==0.10.0
-dask==2.5.2
-decorator==4.4.0
-defusedxml==0.6.0
-distributed==2.5.2
-docopt==0.6.2
-docutils==0.14
-editdistance==0.5.3
-el-core-news-md==2.1.0
-el-core-news-sm==2.1.0
-entrypoints==0.3
-et-xmlfile==1.0.1
-fastcache==1.1.0
-filelock==3.0.12
-Flask==1.1.1
-Flask-Cors==3.0.8
-fsspec==0.5.2
-gast==0.2.2
-gensim==3.8.0
-gevent==1.4.0
-glob2==0.7
-gmpy2==2.0.8
-google-api-python-client==1.7.9
-google-auth==1.6.3
-google-auth-httplib2==0.0.3
-google-auth-oauthlib==0.4.0
-google-pasta==0.1.7
-greenlet==0.4.15
-grpcio==1.22.0
-h5py==2.9.0
-HeapDict==1.0.1
-html5lib==1.0.1
-httplib2==0.13.0
-idna==2.8
-imageio==2.6.0
-imagesize==1.1.0
-importlib-metadata==0.23
-ipykernel==5.1.2
-ipython==7.8.0
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
-isodate==0.6.0
-isort==4.3.21
-itsdangerous==1.1.0
-jdcal==1.4.1
-jedi==0.15.1
-jeepney==0.4.1
-Jinja2==2.10.3
-jmespath==0.9.4
-joblib==0.13.2
-json5==0.8.5
-jsonschema==3.0.2
-jupyter==1.0.0
-jupyter-client==5.3.3
-jupyter-console==6.0.0
-jupyter-core==4.5.0
-jupyterlab==1.1.4
-jupyterlab-server==1.0.6
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.0
-keyring==18.0.0
-kiwisolver==1.1.0
-lazy-object-proxy==1.4.2
-libarchive-c==2.8
-lief==0.9.0
-llvmlite==0.29.0
-locket==0.2.0
-lxml==4.3.4
-Markdown==3.1.1
-MarkupSafe==1.1.1
-matplotlib==3.1.1
-mccabe==0.6.1
-mistune==0.8.4
-mkl-fft==1.0.14
-mkl-random==1.1.0
-mkl-service==2.3.0
-mock==3.0.5
-more-itertools==7.2.0
-mpmath==1.1.0
-msgpack==0.6.1
-multipledispatch==0.6.0
-murmurhash==1.0.2
-nbconvert==5.6.0
-nbformat==4.4.0
-networkx==2.3
-nltk==3.4.4
-nose==1.3.7
-notebook==6.0.1
-num2words==0.5.10
-numba==0.45.1
-numexpr==2.7.0
-numpy==1.17.1
-numpydoc==0.9.1
-oauthlib==3.0.2
-olefile==0.46
-openpyxl==3.0.0
-packaging==19.2
-pandas==0.25.1
-pandocfilters==1.4.2
-parso==0.5.1
-partd==1.0.0
-path.py==12.0.1
-pathlib2==2.3.5
-patsy==0.5.1
-pep8==1.7.1
-pexpect==4.7.0
-pickleshare==0.7.5
-Pillow==6.1.0
-pkginfo==1.5.0.1
-plac==0.9.6
-pluggy==0.13.0
-ply==3.11
-pocketsphinx==0.1.15
-preshed==2.0.1
-prometheus-client==0.7.1
-prompt-toolkit==2.0.10
-protobuf==3.9.0
-psutil==5.6.3
-ptyprocess==0.6.0
-py==1.8.0
-pyasn1==0.4.5
-pyasn1-modules==0.2.5
-pycodestyle==2.5.0
-pycosat==0.6.3
-pycparser==2.19
-pycrypto==2.6.1
-pycurl==7.43.0.3
-pyflakes==2.1.1
-Pygments==2.4.2
-pylint==2.4.2
-PyNLPl==1.2.9
-pyodbc==4.0.27
-pyOpenSSL==19.0.0
-pyparsing==2.4.1
-pyrsistent==0.15.4
-PySocks==1.7.1
-pytest==5.2.1
-pytest-arraydiff==0.3
-pytest-astropy==0.5.0
-pytest-doctestplus==0.4.0
-pytest-openfiles==0.4.0
-pytest-remotedata==0.3.2
-python-dateutil==2.8.0
-pytz==2019.3
-PyWavelets==1.0.3
-PyYAML==5.1.2
-pyzmq==18.1.0
-QtAwesome==0.6.0
-qtconsole==4.5.5
-QtPy==1.9.0
-rdflib==4.2.2
-requests==2.22.0
-requests-oauthlib==1.2.0
-rope==0.14.0
-rsa==4.0
-ruamel-yaml==0.15.46
-s3transfer==0.2.1
-scikit-image==0.15.0
-scikit-learn==0.21.2
-scipy==1.3.0
-seaborn==0.9.0
-SecretStorage==3.1.1
-Send2Trash==1.5.0
-simplegeneric==0.8.1
-singledispatch==3.4.0.3
-six==1.12.0
-sklearn==0.0
-smart-open==1.8.4
-snowballstemmer==2.0.0
-sortedcollections==1.1.2
-sortedcontainers==2.1.0
-soupsieve==1.9.2
-spacy==2.1.6
-Sphinx==2.2.0
-sphinxcontrib-applehelp==1.0.1
-sphinxcontrib-devhelp==1.0.1
-sphinxcontrib-htmlhelp==1.0.2
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.2
-sphinxcontrib-serializinghtml==1.1.3
-sphinxcontrib-websupport==1.1.2
-spyder==3.3.6
-spyder-kernels==0.5.2
-SQLAlchemy==1.3.9
-srsly==0.0.7
-statsmodels==0.10.1
-sympy==1.4
-tables==3.5.2
-tblib==1.4.0
-tensorboard==1.14.0
-tensorflow==1.14.0
-tensorflow-estimator==1.14.0
-termcolor==1.1.0
-terminado==0.8.2
-testpath==0.4.2
-thinc==7.0.8
-toolz==0.10.0
-tornado==6.0.3
-tqdm==4.32.2
-traitlets==4.3.3
-typed-ast==1.4.0
-unicodecsv==0.14.1
-uritemplate==3.0.0
-urllib3==1.25.3
-wasabi==0.2.2
-wcwidth==0.1.7
-webencodings==0.5.1
-Werkzeug==0.15.5
-widgetsnbextension==3.5.1
-wrapt==1.11.2
-wurlitzer==1.0.3
-xlrd==1.2.0
-XlsxWriter==1.2.1
-xlwt==1.3.0
-zict==1.0.0
-zipp==0.6.0
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: linux-64
+_libgcc_mutex=0.1=main
+ca-certificates=2020.1.1=0
+certifi=2019.11.28=py36_0
+click=7.1.1=pypi_0
+crypto=1.4.1=pypi_0
+flask=1.1.1=pypi_0
+flask-cors=3.0.8=pypi_0
+itsdangerous=1.1.0=pypi_0
+jinja2=2.11.1=pypi_0
+ld_impl_linux-64=2.33.1=h53a641e_7
+libedit=3.1.20181209=hc058e9b_0
+libffi=3.2.1=hd88cf55_4
+libgcc-ng=9.1.0=hdf63c60_0
+libstdcxx-ng=9.1.0=hdf63c60_0
+markupsafe=1.1.1=pypi_0
+naked=0.1.31=pypi_0
+ncurses=6.2=he6710b0_0
+openssl=1.1.1d=h7b6447c_4
+pip=20.0.2=py36_1
+pycrypto=2.6.1=pypi_0
+python=3.6.10=h0371630_0
+pyyaml=5.3=pypi_0
+readline=7.0=h7b6447c_5
+setuptools=46.0.0=py36_0
+shellescape=3.8.1=pypi_0
+sqlite=3.31.1=h7b6447c_0
+tk=8.6.8=hbc83047_0
+wheel=0.34.2=py36_0
+xz=5.2.4=h14c3975_4
+zlib=1.2.11=h7b6447c_3
