--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,15 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-_libgcc_mutex=0.1=main
-ca-certificates=2020.1.1=0
-certifi=2019.11.28=py36_0
-click=7.1.1=pypi_0
-crypto=1.4.1=pypi_0
-flask=1.1.1=pypi_0
-flask-cors=3.0.8=pypi_0
-itsdangerous=1.1.0=pypi_0
-jinja2=2.11.1=pypi_0
-ld_impl_linux-64=2.33.1=h53a641e_7
-libedit=3.1.20181209=hc058e9b_0
-libffi=3.2.1=hd88cf55_4
-libgcc-ng=9.1.0=hdf63c60_0
-libstdcxx-ng=9.1.0=hdf63c60_0
-markupsafe=1.1.1=pypi_0
-naked=0.1.31=pypi_0
-ncurses=6.2=he6710b0_0
-openssl=1.1.1d=h7b6447c_4
-pip=20.0.2=py36_1
-pycrypto=2.6.1=pypi_0
-python=3.6.10=h0371630_0
-pyyaml=5.3=pypi_0
-readline=7.0=h7b6447c_5
-setuptools=46.0.0=py36_0
-shellescape=3.8.1=pypi_0
-sqlite=3.31.1=h7b6447c_0
-tk=8.6.8=hbc83047_0
-wheel=0.34.2=py36_0
-xz=5.2.4=h14c3975_4
-zlib=1.2.11=h7b6447c_3
+certifi==2019.11.28
+chardet==3.0.4
+click==7.1.1
+Flask==1.1.1
+Flask-Cors==3.0.8
+idna==2.9
+itsdangerous==1.1.0
+Jinja2==2.11.1
+MarkupSafe==1.1.1
+pycryptodome==3.9.7
+requests==2.23.0
+six==1.14.0
+urllib3==1.25.8
+Werkzeug==1.0.0
+wincertstore==0.2
