--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,15 @@ idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
+prompt-toolkit==1.0.14
 pycryptodome==3.9.7
+Pygments==2.6.1
+PyInquirer==1.0.3
+regex==2020.2.20
 requests==2.23.0
 six==1.14.0
+texttable==1.6.2
 urllib3==1.25.8
+wcwidth==0.1.8
 Werkzeug==1.0.0
 wincertstore==0.2
