--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+asgiref==3.2.5
 certifi==2019.11.28
 chardet==3.0.4
 click==7.1.1
+Django==3.0.4
+django-crispy-forms==1.9.0
+django-static-jquery==2.1.4
 Flask==1.1.1
 Flask-Cors==3.0.8
 idna==2.9
@@ -11,9 +15,11 @@ prompt-toolkit==1.0.14
 pycryptodome==3.9.7
 Pygments==2.6.1
 PyInquirer==1.0.3
+pytz==2019.3
 regex==2020.2.20
 requests==2.23.0
 six==1.14.0
+sqlparse==0.3.1
 texttable==1.6.2
 urllib3==1.25.8
 wcwidth==0.1.8
